<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_img1"
    tools:context=".SignUpFragment">

    <ImageView
        android:id="@+id/bg_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"

        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/signup_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/bg_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tv_create_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/create_account"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>


            <EditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:background="@drawable/edittext_bg"
                android:padding="8dp"
                android:paddingStart="10dp"
                android:drawableStart="@drawable/user"
                android:drawablePadding="10dp"
                android:layout_marginBottom="10dp"/>


            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:background="@drawable/edittext_bg"
                android:padding="8dp"
                android:layout_marginBottom="10dp"/>


            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:background="@drawable/edittext_bg"
                android:padding="8dp"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"/>

            <!-- Sign Up Button -->
            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/white" />

            <!-- Sign up with Google -->
            <Button
                android:id="@+id/btn_google_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_with_google"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/black"
                android:drawableStart="@drawable/google" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
