<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meal_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    android:paddingBottom="10dp"
    app:cardCornerRadius="20dp"
    android:layout_margin="8dp"
    android:background="@drawable/category_item_bg">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/meal_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/meal_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_category"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        app:srcCompat="@drawable/american_food" />

    <TextView
        android:id="@+id/meal_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:text="@string/meal_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/meal_img"
        app:layout_constraintStart_toStartOf="@+id/meal_img"
        app:layout_constraintTop_toBottomOf="@+id/meal_img"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/meal_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meal_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/meal_location"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/meal_locationImg"
        app:layout_constraintTop_toBottomOf="@+id/meal_name" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/meal_locationImg"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="bottom|center_vertical"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/app_name"
        android:elevation="2dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/meal_location"
        app:layout_constraintStart_toStartOf="@+id/meal_name"
        app:layout_constraintTop_toTopOf="@+id/meal_location"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        app:srcCompat="@drawable/flag_unknown" />


</androidx.constraintlayout.widget.ConstraintLayout>