<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meal_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="14dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_style"
        android:padding="8dp"
        android:layout_margin="4dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/meal_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/meal_image"
            android:elevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
            app:srcCompat="@drawable/american_food" />

        <TextView
            android:id="@+id/meal_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:inputType="textMultiLine"
            android:text="@string/meal_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/meal_img"
            app:layout_constraintStart_toEndOf="@+id/meal_img"
            app:layout_constraintTop_toTopOf="@+id/meal_img"
            app:layout_constraintVertical_bias="0.341"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/meal_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="5dp"
            android:text="@string/category"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/meal_name"
            app:layout_constraintStart_toStartOf="@+id/meal_name"
            app:layout_constraintTop_toBottomOf="@+id/meal_name" />

        <TextView
            android:id="@+id/meal_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:text="@string/meal_location"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/meal_locationImg"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/meal_locationImg"
            android:layout_width="22dp"
            android:layout_height="21dp"
            android:layout_gravity="bottom|center_vertical"
            android:layout_marginStart="80dp"
            android:contentDescription="@string/app_name"
            android:elevation="2dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/meal_location"
            app:layout_constraintStart_toEndOf="@+id/meal_img"
            app:layout_constraintTop_toTopOf="@+id/meal_location"
            app:layout_constraintVertical_bias="0.0"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
            app:srcCompat="@drawable/flag_unknown" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>