<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="12dp"
    android:elevation="8dp"
    android:background="@drawable/star_meal_bg">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/meal_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/meal_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        app:srcCompat="@drawable/american_food" />

    <ImageView
        android:id="@+id/delete_img"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close" />


    <TextView
        android:id="@+id/meal_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:inputType="textMultiLine"
        android:text="@string/meal_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/meal_img"
        app:layout_constraintStart_toStartOf="@+id/meal_category"
        app:layout_constraintTop_toBottomOf="@+id/meal_category"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/meal_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meal_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_vertical"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/location"
        android:drawablePadding="8dp"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/meal_location"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/meal_img"
        app:layout_constraintStart_toStartOf="@+id/meal_name"
        app:layout_constraintTop_toBottomOf="@+id/meal_name" />

</androidx.constraintlayout.widget.ConstraintLayout>